<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/calculator" />

    <EditText
        android:id="@+id/etFirstValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etSecondValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/plus"
        android:textColor="#F77F07"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/subtract"
        android:textColor="#E47B11"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/multiplication"
        android:textColor="#E47B11"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDivi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/division"
        android:textColor="#E47B11"
        android:textSize="18sp" />
</LinearLayout>